# SimpleQmlplayer

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.7d9bc16  CMakeLists.txt.user.dd43dcb  Media.qmlproject  Media.qmlproject.qtds  README.md  qmlmodules  res.qrc
build-imports-Desktop_Qt_6_3_0_GCC_64bit-Debug/: CMakeCache.txt  qtcsettings.cmake
content/: App.qml  BaseCintroller.qml  BaseControllerForm.ui.qml  BaseControllerForm.ui.qml.autosave  CMakeLists.txt  Config.js  Filebuttom.qml  FolderButtom.qml  MediaList.qml  MediaLyc.qml  Screen01.ui.qml  Song.qml  Songlist.qml  SwitchPage.qml  Test.qml  contro.qrc  readlyc.mjs
content/image/controller/: 1  a.sh  a.txt
imports/: CMakeLists.txt
imports/Media/: CMakeLists.txt  Constants.qml  qmldir
imports/Media/designer/: plugin.metainfo
imports/build-Media-Desktop_Qt_6_3_0_GCC_64bit-Debug/: CMakeCache.txt
player/: .gitignore  CMakeLists.txt  main.cpp  my_player.cpp  my_player.h  my_player.h.autosave  my_player_list.cpp  my_player_list.h  player.cpp  player.h  test.cpp
player/vlcpp/include/: Instance.hpp  common.hpp
src/: configread.cpp  configread.h  import_qml_plugins.h  main.cpp  qtplayer.cpp  qtplayer.h
